--- a/html/css/screen.css
+++ b/html/css/screen.css
@@ -47,7 +47,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   font-family: sans-serif;
-  color: #2a2a2a; }
+  color: #f8f7f7; }
 
 a {
   color: #0388a6; }
@@ -60,4 +60,8 @@ a {
 h1{
   font-size: 8em;
   color: green
+}
+
+body {
+    background-image: url("/images/bbackground1.jpg");
 }
