--- a/html/css/screen.css
+++ b/html/css/screen.css
@@ -18,8 +18,13 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline; }
 
+
+
+
+
 body {
-  line-height: 1; }
+  line-height: 1;
+  background-image: url(images/bbackground.jpg) }
 
 ol, ul {
   list-style: none; }
@@ -62,6 +67,3 @@ h1{
   color: green
 }
 
-body {
-    background-image: url("url(../../images/bbackground.jgp)");
-}
