--- a/html/css/codesh.css
+++ b/html/css/codesh.css
@@ -4,7 +4,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  overflow: hidden;}
+  #overflow: hidden;}
   img{
       width: 500px;
   }
